2005-02-27  Erez Zadok  <ezk@cs.sunysb.edu>

	* hlfsd/hlfsd.c (reaper, cleanup): don't use exit(3) in a signal
	handler, but use _exit(2) instead.

	* amd/amd.c (parent_exit): This signal handler is called during
	Amd initialization.  The parent forks a child to do all the hard
	automounting work, and waits for a SIGQUIT signal from the child.
	When the parent gets the signal it's supposed to call this handler
	and exit(3), thus completing the daemonizing process.  Alas, on
	some systems, especially Linux 2.4/2.6 with Glibc, exit(3) doesn't
	always terminate the parent process.  Worse, the parent process
	now refuses to accept any more SIGQUIT signals -- they are
	blocked.  What's really annoying is that this doesn't happen all
	the time, suggesting a race condition somewhere.
	(This happens even if I change the logic to use another signal.)
	I traced this to something which exit(3) does in addition to
	exiting the process, probably some atexit() stuff or other
	side-effects related to signal handling.  Either way, since at
	this stage the parent process just needs to terminate, I'm simply
	calling _exit(2).  Note also that the OpenGroup doesn't list
	exit(3) as a recommended "Base Interface" but they do list
	_exit(2) as one.  This fix seems to work reliably all the time.

	* scripts/wait4amd2die.in: change default to recognize that amd is
	down more quickly (check every 3 seconds instead of 5).

2005-02-26  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/xutil.c (amu_release_controlling_tty): warn if closing
	stdin/stdout/stderr failed.  No need for tempfd.

	* scripts/ctl-{amd,hlfsd}.in: before running any real program in
	these shell scripts, chdir to "/" to avoid possible hangs with
	existing NFS mounts.  This was causing ctl-amd's forked
	grand-child amd process to hang if restartable_mounts=no.  Go
	figure.

2005-02-25  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port ia64-unknown-linux-rhel4

	* fsinfo/fsi_util.c (set_ether_if): avoid u_long casting to -1