@@ -38,7 +38,7 @@
 @c
 @c      %W% (Berkeley) %G%
 @c
-@c $Id: am-utils.texi,v 1.94 2005/02/23 03:59:09 ezk Exp $
+@c $Id: am-utils.texi,v 1.95 2005/02/28 01:38:28 ezk Exp $
 @c
 @setfilename am-utils.info
 
@@ -693,7 +693,8 @@ While the server state is uncertain the requests are re-transmitted at
 three second intervals and if no reply is received after four attempts
 the server is marked down.  If a reply is received the fileserver is
 marked up and stays in that state for 30 seconds at which time another
-NFS ping is sent.
+NFS ping is sent.  This interval is configurable and can even be
+turned off using the @i{ping} option.  @xref{opts Option}.
 
 Once a fileserver is marked down, requests continue to be sent every 30
 seconds in order to determine when the fileserver comes back up.  During
@@ -2293,8 +2294,19 @@ The interval, in seconds, between keep-alive pings.  When four
 consecutive pings have failed the mount point is marked as hung.  This
 interval defaults to 30 seconds.  If the ping interval is less than
 zero, no pings are sent and the host is assumed to be always up, which
-can cause unmounts to hang.  See the @i{softlookup} option for a
-better alternative.
+can cause unmounts to hang See the @i{softlookup} option for a better
+alternative.  Turning pings off can be useful in NFS-HA
+(High-Availability) sites where the NFS service rarely goes down.
+Setting the ping value to a large value can reduce the amount of
+NFS_NULL chatter on your network considerably, especially in large
+sites.
+
+Note that if you have multiple @i{Amd} entries using the same file
+server, and each entry sets a different value of N, then each time Amd
+mounts a new entry, the ping value will be re-evaluated (and updated,
+turned off, or turned back on as needed).  Finally, note that NFS_NULL
+pings are sent for both UDP and TCP mounts, because even a hung TCP
+mount can cause user processes to hang.
 
 @item public
 @cindex Mount flags; public
